Screen size would overlap button with footer issue now SOLVED

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,10 +2,10 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  min-height: 100vh;
+  min-height: 100%;
   align-items: center;
   padding: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 80px;
 
   h1 {
     font-size: 3.4rem;
