--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -4,6 +4,7 @@ footer {
   z-index: 2;
   bottom: 0;
   cursor: pointer;
+  height: 80px;
 }
 .footer__info {
   height: 80px;
