--- a/src/index.scss
+++ b/src/index.scss
@@ -16,5 +16,5 @@ html {
   align-items: center;
   justify-content: center;
   position: relative;
-
+  min-height: 100vh;
 }
